[refactor] Replace String.format calls with formatted
Use the isolated String.formatted rewrite where OpenRewrite made no other Java 21 changes.